# SussyLauncher

./: .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust_build_and_test.yml
public/: global.css
src/: App.svelte  Donwload.svelte  Manage.svelte  Mod.svelte  structures.ts
src-tauri/: .gitignore  Cargo.toml  known_mods.json  rustfmt.toml  sussy_launcher.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  github_api.rs  main.rs  mod_manager.rs  util.rs
