[package]
name = "app"
version = "0.1.3"
description = "Sussy Launcher ඞ 🚀🚀🚀🚀"
authors = [ "RedstoneMedia" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.0", features = ["api-all"] }
tokio = { version = "1.21.2", features = [ "sync", "net", "rt", "macros" ] }
reqwest = { version = "0.11.12", features = [ "json", "stream" ] }
zip = "0.6.3"
futures-util = "0.3.25"
walkdir = "2.3.2"
pathdiff = "0.2.1"
sysinfo = "0.26.7"
once_cell = "1.16"
open = "3.0.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
